--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
+    <tittle>Formulario</tittle>
+    <meta charset="UTF-8">
+    </html>
+    <body>
+        <h2>Formulario De Contato</h2>
+
+        <form action="processar.php" method="post">
+             <label for="nome">Nome:</label>
+             <input type="text" id="nome" name="nome" required><br><br>
+              
+             <label for="email">E-mail:</label>
+             <input type="email" id="email" name="email" required><br><br>
+
+             <label for="mensagem">Mensagem:</label>
+             <textarea id="mensagem" name="mensagem" rows="4" cols="50" required><br>br>
+
+                <input type="submit" value="Enviar">
+
+        
+    </body>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Formulário</title>
 </head>
