--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
              <input type="email" id="email" name="email" required><br><br>
 
              <label for="mensagem">Mensagem:</label>
-             <textarea id="mensagem" name="mensagem" rows="4" cols="50" required><br><br>
+             <textarea id="mensagem" name="mensagem" rows="4" cols="50" required></textarea><br><br>
 
                 <input type="submit" value="Enviar">
              </form>
